<resources>
    <string name="app_name">CemARSLAN_HW1</string>
    <string name="welcomeTxt">Welcome To Cem ARSLAN Homework1</string>
    <string name="tvTakeNametxt">Before we start, first you should enter your name!</string>
    <string name="tvUnlocktxt">To Unlock, Swipe Left</string>
    <string name="Act2ContinueMsg">To Continue the Application, You Should Enter Below Required Information!</string>
    <string name="Act2RegisterMsg">Registeration Page</string>
    <string name="genderFemale">Female</string>
    <string name="genderMale">Male</string>
    <string name="selectGender">Please Select Your Gender</string>
    <string name="enterName">Enter Your Name</string>
    <string name="enterSurname">Enter Your Surname</string>
    <string name="cont">CONTINUE</string>
    <string name="didUlike">Did you like unlock screen idea with a SeekBar? :))</string>
    <string name="YesILike">Yes,I really like it!</string>
    <string name="Ordinary">An Ordinary Idea..</string>
    <string name="askAgain">ASK AGAIN</string>
    <string name="tvAct3Title">FUNCTIONS</string>
    <string name="tvCtisInfo">ABOUT CTIS</string>
    <string name="staffPictures">STAFF PICTURES</string>
    <string name="tvCalc">CALCULATOR</string>
    <string name="tvEstimationGame">ESTIMATION GAME</string>
    <string name="tvRateAndExit">RATE APP AND EXIT</string>
    <string name="tvSeeInstructors">Select an Instructor</string>
    <string name="tvSeeAssisstants">Select an Assisstant</string>
    <string name="tvSeeCredits">See Lecture Credits</string>
    <string name="teacherViewClose">Close</string>
    <string name="tvCalculator">CALCULATOR</string>
    <string name="tvBtnSum">Summation (+)</string>
    <string name="tvBtnSubs">Subtraction (-)</string>
    <string name="tvBtnDiv">Division (/)</string>
    <string name="tvBtnMul">Multiplication (x)</string>
    <string name="hintNum1">Enter First Number</string>
    <string name="hintNum2">Enter Second Number</string>
    <string name="calcResultDialog">Calculation Result</string>
    <string name="sumDoneMsg">Summation was DONE</string>
    <string name="subtraDoneMsg">Subtraction was DONE</string>
    <string name="mulDoneMsg">Multiplication was DONE</string>
    <string name="divDoneMsg">Division was DONE</string>
    <string name="result">RESULT</string>
    <string name="pleaseFillNum1Num2">Enter all variables!</string>
    <string name="notSetToastCalculator">NO TOAST SET</string>
    <string name="tvFirstNumber">First Number :</string>
    <string name="extGam">Exit Game Without Finish</string>
    <string name="tvSecondNumber">Second Number :</string>
    <string name="CANOTbeZeroToast">Denominator CANNOT be ZERO!</string>
    <string name="estimate">Estimation? : </string>
    <string name="generateNewRndNmbr">Click To Generate New Random Btw 0-100</string>
    <string name="randomHint">Hint (to test app):</string>
    <string name="enterAnum">Enter a number</string>
    <string name="wrongEst">Wrong Guess Counter:</string>
    <string name="newRndGeneratedToast">New Random Number Generated</string>
    <string name="goUp">Go UP!</string>
    <string name="goDown">Go DOWN!</string>
    <string name="gameCongratulations">CONGRATULATIONS!!!</string>
    <string name="gameRESTART">RESTART</string>
    <string name="gameQuit">QUIT GAME</string>
    <string name="gamePlayedAct3Msg">Estimation Game has been played!</string>
    <string name="gameScoreAct3Msg">Your Score is: </string>
    <string name="gameScoreAdvice">The less trying number,the more you are successful!</string>
    <string name="exitAPP">EXIT APP</string>
    <string name="thankYouMsg">Thank you!</string>
    <string name="try5">hint : TRY TO GIVE 5 STARS!</string>
    <string name="ns">Not Selected</string>


</resources>