<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".StartingActivities.Activity2">

    <TextView
        android:id="@+id/tvAct2RegisterMsg"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="?attr/colorSecondaryVariant"
        android:gravity="center"
        android:text="@string/Act2RegisterMsg"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="30sp"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/tvUlike"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=" "
        android:textAlignment="center"
        android:textColor="?android:attr/colorMultiSelectHighlight"
        android:textSize="16dp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/askAgainBtn"
        android:layout_width="160dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_height="40dp"
        android:onClick="onClickDialog"
        android:text="@string/askAgain"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/tvContinueMsg"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/Act2ContinueMsg"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enterName" />

    <EditText
        android:id="@+id/etUserSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enterSurname" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/selectGender"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rbGroup"
                                                >

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/genderFemale" />

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/genderMale" />

    </RadioGroup>

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:forceHasOverlappingRendering="false"
        android:onClick="onClickContinue"
        android:text="@string/cont"
        android:textStyle="bold"
        />

</LinearLayout>