<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".differentPack.FunctionsOfApp.Act6Estimator">

    <Button
        android:id="@+id/generateRndBtn"
        android:layout_width="254dp"
        android:layout_height="102dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/generateNewRndNmbr"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="187dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/wrongEst"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/TVwrongCnt"
            android:layout_width="142dp"
            android:layout_height="38dp"
            android:text="0"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="147dp"
            android:layout_height="38dp"
            android:text="@string/estimate"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ETuserGuess"
            android:layout_width="246dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/enterAnum"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/randomHint"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRndNumHint"
            android:layout_width="207dp"
            android:layout_height="109dp"
            android:text="-"
            android:textSize="18dp" />
    </LinearLayout>

    <Button
        android:id="@+id/extGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/extGam" />


</LinearLayout>