<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".differentPack.FunctionsOfApp.Activity3">

    <TextView
        android:id="@+id/tvAct3Welcome"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:layout_marginBottom="30dp"
        android:background="@color/teal_700"
        android:gravity="center"
        android:text="@string/tvAct3Title"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvRegisteredUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_error"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/aboutCTISBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:onClick="onClick"
        android:text="@string/tvCtisInfo"
        android:textStyle="bold" />

    <Button
        android:id="@+id/calcBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:onClick="onClick"
        android:text="@string/tvCalc"
        android:textStyle="bold" />

    <Button
        android:id="@+id/estGameBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="onClick"
        android:text="@string/tvEstimationGame"
        android:textStyle="bold" />

    <Button
        android:id="@+id/rateAndExitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/tvRateAndExit"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/gameResultLayout"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_orange_light"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gamePlayedAct3Msg"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="19dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/gameScoreAct3Msg"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/scoreOfGame"
                android:layout_width="213dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="-"
                android:textColor="@color/design_default_color_error"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gameScoreAdvice"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_error"
            android:textSize="19dp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>