<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:orientation="vertical"
    tools:context=".differentPack.FunctionsOfApp.Act4AboutCtis">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_gravity="center"
        android:background="@color/design_default_color_secondary"
        android:gravity="center"
        android:text="@string/staffPictures"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_error"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tvSeeInstructors"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/instructorSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/instructors" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tvSeeAssisstants"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/assistantSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/assistants" />

    <ImageView
        android:id="@+id/teacherPicturesIV"
        android:layout_width="match_parent"
        android:layout_height="251dp"
        android:layout_marginTop="50dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvNameTeacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold" />


</LinearLayout>